--- a/design-toolkit/components/src/components/accordion/accordion-group.docs.mdx
+++ b/design-toolkit/components/src/components/accordion/accordion-group.docs.mdx
@@ -40,8 +40,8 @@ The Accordion Group component combines provides a convenient grouping for Accord
 <Canvas of={AccordionGroupStories.Default} />
 
 ## Variants
-* **Cozy** - standard size with larger text and spacing (default)
-* **Compact** - smaller size with reduced text and spacing for space-constrained layouts
+* **cozy** - Standard size with larger text and spacing (default)
+* **compact** - Smaller size with reduced text and spacing for space-constrained layouts
 
 ### Accordion.Group Props
 The Accordion supports all the `Disclosure Group` [props and events from `react-aria-components`](https://react-spectrum.adobe.com/react-aria/DisclosureGroup.html#disclosuregroup-1) and
@@ -49,12 +49,5 @@ The Accordion supports all the `Disclosure Group` [props and events from `react-
 
 See [Accordion](?path=/docs/components-accordion--playground) for details on props for individual sections.
 
-## Subcomponents
-- **Accordion.Group** - Container component that groups multiple accordions together and provides shared configuration like variant and multiple expansion behavior.
-- **[Accordion](?path=/docs/components-accordion--playground)** - Main accordion component that manages the expand/collapse state and renders the header and panel.
-- **Accordion.Header** - Container for the accordion trigger and any additional header elements like menus or action buttons.
-- **Accordion.Trigger** - Button that controls the expand/collapse state.
-- **Accordion.Panel** - Collapsible content container that shows/hides based on the accordion's expanded state.
-
 ## Implementation Notes
-The `AccordionGroup` component wraps the `DisclosureGroup` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/DisclosureGroup.html)
+The `Accordion.Group` component wraps the `DisclosureGroup` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/DisclosureGroup.html)
