--- a/design-toolkit/components/src/components/accordion/accordion.docs.mdx
+++ b/design-toolkit/components/src/components/accordion/accordion.docs.mdx
@@ -58,8 +58,8 @@ The accordion supports an optional [Menu](?path=/docs/components-menu--playgroun
 <Canvas of={AccordionStories.WithMenu} />
 
 ## Variants
-* **Cozy** - standard size with larger text and spacing (default)
-* **Compact** - smaller size with reduced text and spacing for space-constrained layouts
+* **cozy** - Standard size with larger text and spacing (default)
+* **compact** - Smaller size with reduced text and spacing for space-constrained layouts
 
 The variant can be controlled via the `variant` prop on individual accordions or set globally using the `Accordion.Group` component.
 
@@ -67,7 +67,7 @@ The variant can be controlled via the `variant` prop on individual accordions or
 All components and subcomponents accept either a `className` or a `classNames` prop that allow for custom style overrides. The `className` prop takes a string and `classNames` takes an object when there are multiple targets.
 
 The Accordion supports all the `Disclosure` [props and events from `react-aria-components`](https://react-spectrum.adobe.com/react-aria/Disclosure.html#disclosure-1) and
-* **`variant`** - Visual style: `'cozy'` (default) or `'compact'`
+* **`variant`** - Visual style: `'cozy'` (default) | `'compact'`
 
 ### RenderProps Pattern
 
