--- a/design-toolkit/components/src/components/button/button.docs.mdx
+++ b/design-toolkit/components/src/components/button/button.docs.mdx
@@ -42,24 +42,24 @@ Used for navigating
 
 ## Variants
 
-* **Filled** - solid background with high contrast text (default)
-* **Outline** - transparent background with border and text
-* **Flat** - transparent background with text only
-* **Icon** - square button optimized for icon-only content
-* **Floating** - circular button with shadow, perfect for floating action buttons
+* **filled** - Solid background with high contrast text (default)
+* **outline** - Transparent background with border and text
+* **flat** - Transparent background with text only
+* **icon** - Square button optimized for icon-only content
+* **floating** - Circular button with shadow, perfect for floating action buttons
 
 ## Colors
 
-* **Info** - blue styling for primary actions (default)
-* **Serious** - orange styling for warning or caution actions
-* **Critical** - red styling for destructive or dangerous actions
+* **info** - Blue styling for primary actions (default)
+* **serious** - Orange styling for warning or caution actions
+* **critical** - Red styling for destructive or dangerous actions
 
 ## Sizes
 
-* **Large** - prominent size for primary actions
-* **Medium** - standard size for most use cases (default)
-* **Small** - compact size for secondary actions
-* **XSmall** - minimal size for tight spaces or icon buttons
+* **large** - Prominent size for primary actions
+* **medium** - Standard size for most use cases (default)
+* **small** - Compact size for secondary actions
+* **xsmall** - Minimal size for tight spaces or icon buttons
 
 ## Props
 All components and subcomponents accept a `className` prop that allow for custom style overrides.
@@ -68,9 +68,9 @@ The Button and LinkButton support all the `Button` [props and events from `react
 
 The ToggleButton supports all the `ToggleButton` [props and events from `react-aria-components`](https://react-spectrum.adobe.com/react-aria/ToggleButton.html#props).
 
-* **`variant`** - Visual style: `'filled'` (default), `'outline'`, `'flat'`, `'icon'`, or `'floating'`
-* **`color`** - Color scheme: `'info'` (default), `'serious'`, or `'critical'`
-* **`size`** - Size variant: `'large'`, `'medium'` (default), `'small'`, or `'xsmall'`
+* **`variant`** - Visual style: `'filled'` (default) | `'outline'` | `'flat'` | `'icon'` | `'floating'`
+* **`color`** - Color scheme: `'info'` (default) | `'serious'` | `'critical'`
+* **`size`** - Size variant: `'large'` | `'medium'` (default) | `'small'` |  `'xsmall'`
 
 All button types accept standard HTML button/anchor attributes and forward them to the underlying elements.
 
