--- a/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
+++ b/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
@@ -7,6 +7,11 @@ import * as CheckboxStories from './checkbox.stories';
 # Checkbox
 The Checkbox component provides interactive checkboxes for form inputs, settings, and multi-selection interfaces. It's built on React Aria Components and provides excellent accessibility out of the box. Checkboxes are commonly used in forms, settings panels, data tables, and anywhere users need to make binary selections or choose from multiple options.
 
+It is composed of the following components:
+- **Checkbox** - Main checkbox component for individual selections
+- **Checkbox.Group** - Container for grouping multiple checkboxes with shared configuration
+
+
 ## Example usage
 
 ### Basic
@@ -16,22 +21,17 @@ The Checkbox component provides interactive checkboxes for form inputs, settings
 ```
 <Canvas of={CheckboxStories.Default} />
 
-## Variants
-
-* **Individual Checkbox** - standalone checkbox for single selections
-* **Checkbox Group** - container for multiple related checkboxes with shared label and orientation
-
 ## States
 
-* **Unselected** - default state with empty checkbox
-* **Selected** - checked state with checkmark icon
-* **Indeterminate** - partial selection state with minus icon (commonly used for "select all" scenarios)
-* **Disabled** - non-interactive state with reduced opacity
+* **unselected** - Default state with empty checkbox
+* **selected** - Checked state with checkmark icon
+* **indeterminate** - Partial selection state with minus icon (commonly used for "select all" scenarios)
+* **disabled** - Non-interactive state with reduced opacity
 
 ## Orientations
 
-* **Vertical** - checkboxes stacked vertically (default)
-* **Horizontal** - checkboxes arranged horizontally with wrapping
+* **vertical** - Checkboxes stacked vertically (default)
+* **horizontal** - Checkboxes arranged horizontally with wrapping
 
 
 ## Props
@@ -45,14 +45,6 @@ The Checkbox supports all the `Checkbox` [props and events from `react-aria-comp
   * `label` - Applied to the label text
 
 All checkbox types accept standard HTML input attributes and forward them to the underlying elements.
-
-## Subcomponents
-
-### Checkbox
-The main checkbox component for individual selections. Renders as a label element containing the checkbox control and text.
-
-### Checkbox.Group
-Container component that groups multiple checkboxes together and provides shared configuration like label, orientation, and validation state.
 
 ## Implementation Notes
 The `Checkbox` component wraps the `Checkbox` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Checkbox.html)
