--- a/design-toolkit/components/src/components/classification-banner/classification-banner.docs.mdx
+++ b/design-toolkit/components/src/components/classification-banner/classification-banner.docs.mdx
@@ -7,6 +7,10 @@ import * as ClassificationBannerStories from './classification-banner.stories';
 # ClassificationBanner
 The ClassificationBanner component displays prominent security classification banners for pages, documents, and applications. It's built with Tailwind CSS and provides standardized visual indicators for different classification levels that span the full width of their container. Classification banners are commonly used in government systems, secure environments, and anywhere you need to prominently display the security level or classification of information at the top or bottom of pages.
 
+It is composed of the following components:
+- **ClassificationBanner** - Main classification component for displaying security levels
+- **ClassificationBanner.Provider** - Context provider for setting default props across multiple classification banners
+
 ## Example usage
 ```tsx
 // Basic classification banner with default variant
@@ -63,13 +67,13 @@ The ClassificationBanner component displays prominent security classification ba
 
 ## Variants
 
-* **Missing** - red styling for missing classification information (default)
-* **Unclassified** - gray styling for unclassified information
-* **CUI** - Controlled Unclassified Information
-* **Confidential** - confidential level information
-* **Secret** - secret level information
-* **Top-Secret** - top secret level information
-* **TS-SCI** - Top Secret/Sensitive Compartmented Information
+* **missing** - Red styling for missing classification information (default)
+* **unclassified** - Gray styling for unclassified information
+* **cui** - Controlled Unclassified Information
+* **confidential** - Confidential level information
+* **secret** - Secret level information
+* **top-secret** - Top secret level information
+* **ts-sci** - Top Secret/Sensitive Compartmented Information
 
 Each variant uses appropriate color combinations and automatically displays default text when no children are provided. Banners span the full width of their container and are designed to be prominently displayed.
 
@@ -82,14 +86,6 @@ Each variant uses appropriate color combinations and automatically displays defa
 * **`className`** - Additional CSS classes for custom styling
 
 The component accepts all standard HTML div attributes and forwards them to the underlying element.
-
-## Subcomponents
-
-### ClassificationBanner.Provider
-Context provider component that allows setting default props for multiple ClassificationBanner components. Useful for maintaining consistent styling across a group of classification banners.
-
-### ClassificationBanner
-The main classification banner component that renders the security level indicator with appropriate styling and default text.
 
 ## Implementation Notes
 The `ClassificationBanner` component is built with Tailwind CSS and Tailwind Variants (tv) for flexible styling and variant management.
