--- a/design-toolkit/components/src/components/details-list/details-list.docs.mdx
+++ b/design-toolkit/components/src/components/details-list/details-list.docs.mdx
@@ -7,6 +7,13 @@ import * as DetailsListStories from './details-list.stories';
 # DetailsList
 A semantic details list component for displaying metadata in key-value pairs. Uses CSS Grid layout with labels in the first column and values in the second column. Perfect for map object details, user profiles, or any structured information displayed in sidebars or detail panels.
 
+It is composed of the following components:
+
+- **DetailsList** - Main details list container with grid layout and alignment options
+- **DetailsList.Label** - Label component for keys/terms (renders as `<dt>`)
+- **DetailsList.Value** - Value component for descriptions/definitions (renders as `<dd>`)
+- **DetailsList.Provider** - Context provider for setting default props across multiple details lists
+
 ## Example usage
 ```tsx
 <DetailsList align="justify">
@@ -26,13 +33,13 @@ A semantic details list component for displaying metadata in key-value pairs. Us
 </DetailsList>
 ```
 
-## Variants
+## Alignments
 
-* **Left** - Both labels and values are left-aligned
-* **Center** - Labels are right-aligned, values are left-aligned
-* **Justify** - Labels are left-aligned, values are right-aligned (default)
+* **left** - Both labels and values are left-aligned
+* **center** - Labels are right-aligned, values are left-aligned
+* **justify** - Labels are left-aligned, values are right-aligned (default)
 
-**Justify** is the default alignment and provides the most balanced visual appearance, with labels on the left and values extending to the right edge.
+**justify** is the default alignment and provides the most balanced visual appearance, with labels on the left and values extending to the right edge.
 
 <Canvas of={DetailsListStories.Default} />
 
