--- a/design-toolkit/components/src/components/hero/hero.docs.mdx
+++ b/design-toolkit/components/src/components/hero/hero.docs.mdx
@@ -7,6 +7,11 @@ import * as HeroStories from './hero.stories';
 # Hero
 A versatile hero component that displays an icon alongside primary and secondary content. Automatically organizes child components by type and supports both stacked and grid layouts. Perfect for displaying object information, section headers, or prominent content areas with visual hierarchy.
 
+It is composed of the following components:
+- **Hero** - Main hero container with automatic layout and icon integration
+- **Hero.Title** - Primary heading text component (renders as `<h2>` element)
+- **Hero.Subtitle**  - Secondary text content component for additional metadata
+
 ## Example usage
 ```tsx
 // Basic hero with icon and content
@@ -24,21 +29,14 @@ A versatile hero component that displays an icon alongside primary and secondary
 </Hero>
 ```
 
-## Variants
+## Layouts
 
-* **Stack** - Vertical layout with larger icon and stacked content (default)
-* **Grid** - Horizontal layout with smaller icon beside content (when `compact={true}`)
+* **stack** - Vertical layout with larger icon and stacked content (default)
+* **grid** - Horizontal layout with smaller icon beside content (when `compact={true}`)
 
 **Stack** is the default layout and provides a prominent, spacious display ideal for main content areas, while **Grid** offers a more compact, inline presentation suitable for secondary content or dense layouts.
 
 <Canvas of={HeroStories.Default} />
-
-## Subcomponents
-
-The Hero component provides several subcomponents that work together to create a complete hero section:
-
-- **`Hero.Title`** - Primary heading text that displays prominently (renders as `<h2>` element)
-- **`Hero.Subtitle`** - Secondary text content that can appear multiple times for additional metadata
 
 ## Props
 
