--- a/design-toolkit/components/src/components/icon/icon.docs.mdx
+++ b/design-toolkit/components/src/components/icon/icon.docs.mdx
@@ -7,6 +7,11 @@ import * as IconStories from './icon.stories';
 # Icon
 A flexible icon container component that provides consistent sizing, styling, and context management for SVG icons. The Icon component automatically handles size variants and can be used with the Icon.Provider for consistent sizing across multiple icons. Perfect for displaying icons in buttons, navigation, and other UI elements with proper accessibility and styling.
 
+It is composed of the following components:
+
+- **Icon** - Wrapper component for displaying SVG icons with consistent sizing
+- **Icon.Provider** - Context provider fro setting default icon sizes
+
 ## Example usage
 ```tsx
 // Basic icon usage
@@ -32,22 +37,16 @@ A flexible icon container component that provides consistent sizing, styling, an
 </Icon.Provider>
 ```
 
-## Variants
+## Sizes
 
-* **XSmall** - Very small icon (16px), suitable for dense interfaces and small UI elements
-* **Small** - Small icon (20px), ideal for secondary actions and compact layouts
-* **Medium** - Standard icon size (24px, default), perfect for most use cases
-* **Large** - Large icon (32px), suitable for prominent actions and main navigation
+* **xsmall** - Very small icon (16px), suitable for dense interfaces and small UI elements
+* **small** - Small icon (20px), ideal for secondary actions and compact layouts
+* **medium** - Standard icon size (24px, default), perfect for most use cases
+* **large** - Large icon (32px), suitable for prominent actions and main navigation
 
-**Medium** is the default size and should be used for most use cases, while the other sizes are better suited for specific interface density requirements.
+**medium** is the default size and should be used for most use cases, while the other sizes are better suited for specific interface density requirements.
 
 <Canvas of={IconStories.Default} />
-
-## Subcomponents
-
-The Icon component provides a provider subcomponent for consistent sizing across multiple icons:
-
-- **`Icon.Provider`** - Context provider that sets consistent size for all child Icon components
 
 ## Props
 
@@ -146,10 +145,10 @@ Icons automatically inherit color from their parent context and can be labeled w
 
 The Icon component uses CSS custom properties for consistent sizing across the design system:
 
-- **XSmall**: `--icon-size-xs` (16px)
-- **Small**: `--icon-size-s` (20px)
-- **Medium**: `--icon-size-m` (24px, default)
-- **Large**: `--icon-size-l` (32px)
+- **xsmall**: `--icon-size-xs` (16px)
+- **small**: `--icon-size-s` (20px)
+- **medium**: `--icon-size-m` (24px, default)
+- **large**: `--icon-size-l` (32px)
 
 ## Implementation Notes
 The `Icon` component is built using React Aria Components and provides a flexible, accessible icon system with consistent sizing and styling.
