--- a/design-toolkit/components/src/components/popover/popover.docs.mdx
+++ b/design-toolkit/components/src/components/popover/popover.docs.mdx
@@ -7,6 +7,15 @@ import * as PopoverStories from './popover.stories';
 # Popover
 A flexible and accessible popover component that provides contextual information, actions, or content overlays. Built on top of React Aria Components, the Popover component offers a comprehensive solution for displaying additional content without disrupting the main user interface flow. Perfect for tooltips, context menus, and informational overlays.
 
+It is composed of the following components:
+
+- **Popover** - Root component that manages popover state and positioning
+- **Popover.Trigger** - Element that triggers the popover open
+- **Popover.Content** - Main popover container with positioning and backdrop
+- **Popover.Title** - Optional semantic heading for the popover
+- **Popover.Body** - Main content area for the popover
+- **Popover.Footer** - Optional footer area for actions or additional content
+
 ## Example usage
 ```tsx
 // Basic popover with title and content
@@ -53,28 +62,18 @@ A flexible and accessible popover component that provides contextual information
 </Popover>
 ```
 
-## Variants
+## Placements
 
 The Popover component supports different placement options to position the popover relative to its trigger:
 
-* **Bottom** - Popover appears below the trigger (default)
-* **Top** - Popover appears above the trigger
-* **Left** - Popover appears to the left of the trigger
-* **Right** - Popover appears to the right of the trigger
+* **bottom** - Popover appears below the trigger (default)
+* **top** - Popover appears above the trigger
+* **left** - Popover appears to the left of the trigger
+* **right** - Popover appears to the right of the trigger
 
-**Bottom** is the default placement and should be used for most use cases, while other placements are better suited for specific layout constraints or design requirements.
+**bottom** is the default placement and should be used for most use cases, while other placements are better suited for specific layout constraints or design requirements.
 
 <Canvas of={PopoverStories.Simple} />
-
-## Subcomponents
-
-The Popover component provides several subcomponents that work together to create a complete popover interface:
-
-- **`Popover.Trigger`** - The element that triggers the popover to open
-- **`Popover.Content`** - The main popover container with positioning and backdrop
-- **`Popover.Title`** - Optional header text for the popover
-- **`Popover.Body`** - Main content area for the popover
-- **`Popover.Footer`** - Optional footer area for actions or additional content
 
 ## Props
 
