--- a/design-toolkit/components/src/components/skeleton/skeleton.docs.mdx
+++ b/design-toolkit/components/src/components/skeleton/skeleton.docs.mdx
@@ -31,8 +31,8 @@ The Skeleton component provides a flexible skeleton loader for indicating loadin
 
 ## Variants
 
-* **Rect** - rectangular placeholder with rounded corners (default)
-* **Circ** - circular placeholder, useful for avatars or circular elements
+* **rect** - Rectangular placeholder with rounded corners (default)
+* **circ** - Circular placeholder, useful for avatars or circular elements
 
 The shape can be controlled via the `shape` prop. Both variants include a subtle pulse animation for better visual feedback.
 
