--- a/design-toolkit/components/src/components/switch/switch.docs.mdx
+++ b/design-toolkit/components/src/components/switch/switch.docs.mdx
@@ -7,6 +7,11 @@ import * as SwitchStories from './switch.stories';
 # Switch
 The Switch component provides a toggle input control that allows users to turn an option on or off. It's built on React Aria Components and provides excellent accessibility out of the box. Switches are commonly used in settings panels, feature toggles, notifications preferences, and anywhere users need to enable or disable a feature with immediate visual feedback.
 
+It is composed of the following components:
+
+- **Switch** - Main switch toggle component for binary on/off controls
+- **Switch.Provider** - Context provider for setting default props across multiple switches
+
 ## Example usage
 ```tsx
 // Basic switch with label
@@ -37,14 +42,14 @@ The Switch component provides a toggle input control that allows users to turn a
 </Switch>
 ```
 
-## Variants
+## States
 
 The Switch component has a single visual variant that automatically adapts based on its state:
-* **Unselected** - displays in the default state with a left-aligned toggle
-* **Selected** - displays in the active state with a right-aligned toggle and highlight colors
-* **Disabled** - displays in a disabled state with reduced opacity and disabled colors
-* **Focused** - displays with focus indicators for keyboard navigation
-* **Hover** - displays with hover effects for better interactivity
+* **unselected** - Displays in the default state with a left-aligned toggle
+* **selected** - Displays in the active state with a right-aligned toggle and highlight colors
+* **disabled** - Displays in a disabled state with reduced opacity and disabled colors
+* **focused** - Displays with focus indicators for keyboard navigation
+* **hover** - Displays with hover effects for better interactivity
 
 <Canvas of={SwitchStories.Default} />
 
@@ -63,14 +68,6 @@ The Switch component has a single visual variant that automatically adapts based
   * `label` - Applied to the label text
 
 The component accepts all standard HTML label attributes and forwards them to the underlying element.
-
-## Subcomponents
-
-### Switch.Provider
-Context provider component that allows setting default props for multiple Switch components. Useful for maintaining consistent styling across a group of switches.
-
-### Switch
-The main switch component that renders the toggle control with an optional label.
 
 ## Implementation Notes
 The `Switch` component wraps the `Switch` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Switch.html)
