--- a/design-toolkit/components/src/components/color-picker/color-picker.docs.mdx
+++ b/design-toolkit/components/src/components/color-picker/color-picker.docs.mdx
@@ -7,6 +7,9 @@ import * as ColorPickerStories from './color-picker.stories';
 # ColorPicker
 The ColorPicker component provides a grid of interactive color swatches for selecting from a predefined set of colors. It's built on React Aria Components and provides excellent accessibility out of the box. Color pickers are commonly used in design tools, theme customization interfaces, form inputs, and anywhere users need to select colors from a predefined palette.
 
+It is composed of the following components:
+- **ColorPicker** - Main color picker component that renders a grid of interactive color swatches
+
 ## Example usage
 ```tsx
 // Basic color picker with predefined colors
@@ -98,7 +101,7 @@ const colorObjects = [
 * **`onChange`** - Callback when a color is selected
 * **`isDisabled`** - Disables the entire color picker
 * **`isRequired`** - Marks the color picker as required
-* **`validationBehavior`** - Validation behavior: `'aria'` or `'native'`
+* **`validationBehavior`** - Validation behavior: `'aria'` | `'native'`
 * **`classNames`** - Custom class names for styling:
   * `picker` - Applied to the main picker container (grid layout)
   * `item` - Applied to individual color swatch items
