--- a/design-toolkit/components/src/components/dialog/dialog.docs.mdx
+++ b/design-toolkit/components/src/components/dialog/dialog.docs.mdx
@@ -7,6 +7,14 @@ import * as DialogStories from './dialog.stories';
 # Dialog
 A modal dialog component that provides a focused, accessible overlay for user interactions. The Dialog component uses a compound component pattern to create structured, customizable dialogs with proper focus management and accessibility features.
 
+It is composed of the following components:
+- **Dialog** - Root component that manages dialog state and trigger behavior
+- **Dialog.Body** - Modal overaly container that renders the dialog portal
+- **Dialog.Title** - Semantic heading element for dialog titles
+- **Dialog.Content** - Wrapper for the main dialog content with appropriate spacing
+- **Dialog.Footer** - Container for action buttons with proper alignment
+- **Dialog.Button** - Pre-styled button component sized based on dialog size
+
 ## Example usage
 ```tsx
 <Dialog size="sm" isDismissable={true}>
@@ -32,24 +40,14 @@ A modal dialog component that provides a focused, accessible overlay for user in
 </Dialog>
 ```
 
-## Variants
+## Sizes
 
-* **Small** - Compact dialog with minimum width of 280px, suitable for simple confirmations or brief messages
-* **Large** - Spacious dialog with minimum width of 320px and maximum width of 720px, ideal for complex forms or detailed content
+* **small** - Compact dialog with minimum width of 280px, suitable for simple confirmations or brief messages
+* **large** - Spacious dialog with minimum width of 320px and maximum width of 720px, ideal for complex forms or detailed content
 
-**Small** is the default size and should be used for most use cases, while **Large** is better suited for content-heavy dialogs.
+**small** is the default size and should be used for most use cases, while **large** is better suited for content-heavy dialogs.
 
 <Canvas of={DialogStories.Default} />
-
-## Subcomponents
-
-The Dialog component provides several subcomponents that work together to create a complete dialog:
-
-- **`Dialog.Body`** - The main container that renders the modal overlay and manages portal behavior
-- **`Dialog.Title`** - Renders the dialog title as a semantic heading element
-- **`Dialog.Content`** - Wrapper for the main dialog content with appropriate spacing
-- **`Dialog.Footer`** - Container for action buttons with proper alignment and spacing
-- **`Dialog.Button`** - Pre-styled button component that automatically adjusts size based on dialog size
 
 ## Props
 
